Fixed size currencyon mobile version

--- a/volunteer/static/volunteer/style.css
+++ b/volunteer/static/volunteer/style.css
@@ -373,6 +373,9 @@ font-size: 155%;
     .outer{
         width:14vw!important;
     }
+    .currency-image{
+        width:13.2vw!important;
+    }
 
 
 
